--- a/plugins/HealthBar/locale_zhTW.yml
+++ b/plugins/HealthBar/locale_zhTW.yml
@@ -1,11 +1,11 @@
 CREEPER: 苦力帕
-SKELETON: 骷顱
+SKELETON: 骷髏
 SPIDER: 蜘蛛
-GIANT: 巨人殭屍
+GIANT: 殭屍巨人
 ZOMBIE: 殭屍
 SLIME: 史萊姆
-GHAST: 地獄水母
-PIG_ZOMBIE: 殭屍豬人
+GHAST: 水母
+PIG_ZOMBIE: 豬人
 ENDERMAN: 安德
 CAVE_SPIDER: 毒蜘蛛
 SILVERFISH: 蠹魚
@@ -23,7 +23,7 @@ SQUID: 烏賊
 WOLF: 狼
 MUSHROOM_COW: 蘑菇牛
 SNOWMAN: 雪人
-OCELOT: 豹貓
+OCELOT: 貓
 IRON_GOLEM: 鐵巨人
 VILLAGER: 村民
 HORSE: 馬
