--- a/plugins/VariableTriggers/serverSurvival/vardata.yml
+++ b/plugins/VariableTriggers/serverSurvival/vardata.yml
@@ -197,35 +197,35 @@ objects:
     Booleans: {}
   world_Click_26266260:
     Integers:
-      total: 426
+      total: 465
     Strings:
       LOC: 262,66,260
     StringLists: {}
     Booleans: {}
   world_Click_26266261:
     Integers:
-      total: 614
+      total: 664
     Strings:
       LOC: 262,66,261
     StringLists: {}
     Booleans: {}
   world_Click_26266262:
     Integers:
-      total: 507
+      total: 556
     Strings:
       LOC: 262,66,262
     StringLists: {}
     Booleans: {}
   world_Click_26266263:
     Integers:
-      total: 570
+      total: 630
     Strings:
       LOC: 262,66,263
     StringLists: {}
     Booleans: {}
   world_Click_26266264:
     Integers:
-      total: 615
+      total: 665
     Strings:
       LOC: 262,66,264
     StringLists: {}
@@ -279,7 +279,7 @@ objects:
       sean9064: 1
       Tabloid_Moon: 3
       jorldans: 2
-      up9cloud-wawa: 3
+      up9cloud-wawa: 2
       sp-qweasdzxc: 2
       pig0581648: 3
       sp-aeq2: 2
@@ -289,10 +289,14 @@ objects:
       sp-Venceno: 3
       sp-tony7789963: 2
       sp-SilverCrow: 2
-      rayr97: 1
+      rayr97: 2
       sp-matthew: 3
-      sp-Yong: 2
+      sp-Yong: 4
       XSniper_FireX: 1
+      andywawa: 4
+      ldslse: 1
+      sp-FunFour: 1
+      t721434: 3
     Strings:
       up9cloud-admin-undo: test
       up9cloud-admin-redo: 250,67,263 2 不小心按到..
@@ -389,7 +393,7 @@ objects:
       jorldans-undo: test
       jorldans-redo: 250,67,261 2 1234
       up9cloud-wawa-undo: test
-      up9cloud-wawa-redo: 256,68,261 3 &1&l晚上八點請tp jp
+      up9cloud-wawa-redo: 527,81,820 2 johnyang0724
       sp-qweasdzxc-undo: test
       sp-qweasdzxc-redo: 250,67,263 2 sp-qweasdzxc
       pig0581648-undo: test
@@ -403,19 +407,27 @@ objects:
       sp-h2927751-undo: test
       sp-h2927751-redo: 250,67,263 1 ...
       sp-Venceno-undo: test
-      sp-Venceno-redo: 250,67,263 3 by 大喇叭
+      sp-Venceno-redo: 250,67,260 3 &fsp-Venceno
       sp-tony7789963-undo: test
       sp-tony7789963-redo: 250,67,263 2 又打到新年許願劍了
       sp-SilverCrow-undo: test
       sp-SilverCrow-redo: 250,68,260 2 YA
       rayr97-undo: test
-      rayr97-redo: 250,67,264 1 &5YA
+      rayr97-redo: 250,67,263 2 &3偶會蓋也會設計
       sp-matthew-undo: test
       sp-matthew-redo: 250,67,263 3 Hi~
       sp-Yong-undo: test
-      sp-Yong-redo: 250,67,261 2 安安
+      sp-Yong-redo: 250,67,261 4 Hi
       XSniper_FireX-undo: test
       XSniper_FireX-redo: 250,67,261 1 &4烈火到此流言
+      andywawa-undo: test
+      andywawa-redo: 250,67,264 4 &l^_^y
+      ldslse-undo: test
+      ldslse-redo: 250,67,263 1 &basdadsd
+      sp-FunFour-undo: test
+      sp-FunFour-redo: 250,68,264 1 &fHi~~
+      t721434-undo: test
+      t721434-redo: 250,67,264 3 a12262008
     StringLists: {}
     Booleans: {}
   VOTE:
@@ -484,14 +496,19 @@ objects:
       sp-harry8952322-index: 5
       sp-h2927751-index: 4
       GUNDAM1203-index: 4
-      sp-Venceno-index: 4
+      sp-Venceno-index: 1
       sp-tony7789963-index: 4
       sp-SilverCrow-index: 6
-      rayr97-index: 5
+      rayr97-index: 4
       sp-CHASING-index: 2
       sp-Yong-index: 2
       sp-xXlXx-index: 12
       XSniper_FireX-index: 2
+      sp-qwe932521-index: 4
+      andywawa-index: 5
+      ldslse-index: 4
+      sp-FunFour-index: 11
+      t721434-index: 5
     Strings:
       publicP1: 250,67,260
       publicP2: 250,67,261
@@ -558,6 +575,11 @@ objects:
       sp-Yong-check: true
       sp-xXlXx-check: false
       XSniper_FireX-check: true
+      sp-qwe932521-check: true
+      andywawa-check: true
+      ldslse-check: true
+      sp-FunFour-check: true
+      t721434-check: true
   VAR:
     Integers: {}
     Strings:
@@ -590,6 +612,13 @@ objects:
       s: 'null'
     StringLists: {}
     Booleans: {}
+  BlockBreak:
+    Integers: {}
+    Strings:
+      diamond_block_cur_finder: jw910731
+      diamond_block_last_finder: jw910731
+    StringLists: {}
+    Booleans: {}
   Cmd_co:
     Integers: {}
     Strings: {}
@@ -599,9 +628,23 @@ objects:
       sp-Venceno: true
       andywawa: true
       in91andy: true
+      up9cloud-wawa: true
+      sp-bonebonekai: true
+      carlccc0911: true
   Cmd_jail:
     Integers: {}
     Strings: {}
     StringLists: {}
     Booleans:
       andywawa: true
+      O0oO0o0Oo0O: true
+      sp-Venceno: true
+      carlccc0911: true
+  Cmd_mute:
+    Integers: {}
+    Strings: {}
+    StringLists: {}
+    Booleans:
+      O0oO0o0Oo0O: true
+      andywawa: true
+      sp-Venceno: true
